[package]
name = "ieee-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expanduser = "1.2.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
tokio = "1.35.1"

[dev-dependencies]
tempfile = "3.9.0"

