[package]
name = "ieee-registry"
description = "A Rust crate to cache the IEEE public registries as csv. "
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/AdamIsrael/ieee-registry"
documentation = "https://github.com/AdamIsrael/ieee-registry"
repository = "https://github.com/AdamIsrael/ieee-registry"
readme = "README.md"
license-file = "LICENSE"
keywords = ["ieee"]
categories = ["caching", "command line utilities"]
exclude = [
    ".vscode/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expanduser = "1.2.2"
reqwest = { version = "0.11.23", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.9.0"

